--- a/Blog/Compact/css/module.blog.css
+++ b/Blog/Compact/css/module.blog.css
@@ -27,7 +27,7 @@ body.controller-blog ul.blog-article-list li.blog-article-list-item {
 	}
 body.controller-blog ul.blog-article-list li.blog-article-list-item {
 	padding: 0.2em 0 0.8em 0;
-	border-top: 1px dotted rgba(0,0,0,0.15);
+/*	border-top: 1px dotted rgba(0,0,0,0.15);*/
 	}
 
 
@@ -45,16 +45,23 @@ body.controller-blog .blog-tag ul.blog-article-tag-list {
 	display: inline;
 	margin-bottom: 0.5em;
 	}
+body.controller-blog .blog-article-abstract {
+	}
 body.controller-blog .blog-article-abstract .blog-article-info-list {
-	position: absolute;
+/*	position: absolute;
 	top: 0px;
-	right: 0px;
+	right: 0px;*/
 	}
 body.controller-blog .blog-article-abstract .blog-article-tag-list {
 	}
 
+body.controller-blog ul.blog-article-list li.blog-article-list-item {
+	padding-top: 1em;
+	}
 body.controller-blog ul.blog-article-list li.blog-article-list-item>a {
-	font-size: 1.1em;
+	font-size: 1.2em;
+	line-height: 2em;
+	font-weight: 400;
 	}
 
 
@@ -128,15 +135,16 @@ body.controller-blog .tag-related-tags {
 /*  --  LIST OF BLOG ARTICLE ABSTRACTS  --  */ 
 body.controller-blog ul.blog-article-list li.blog-article-list-item.blog-article-abstract {
 	padding: 0 0 1em 0;
-	background: -moz-linear-gradient(top, rgba(255,255,255,0.25) 0%, rgba(255,255,255,0) 100%); /* FF3.6+ */
-	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(255,255,255,0.25)), color-stop(100%,rgba(255,255,255,0))); /* Chrome,Safari4+ */
-	background: -webkit-linear-gradient(top, rgba(255,255,255,0.25) 0%,rgba(255,255,255,0) 100%); /* Chrome10+,Safari5.1+ */
-	background: -o-linear-gradient(top, rgba(255,255,255,0.25) 0%,rgba(255,255,255,0) 100%); /* Opera 11.10+ */
-	background: -ms-linear-gradient(top, rgba(255,255,255,0.25) 0%,rgba(255,255,255,0) 100%); /* IE10+ */
-	background: linear-gradient(to bottom, rgba(255,255,255,0.25) 0%,rgba(255,255,255,0) 100%); /* W3C */
-	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#40ffffff', endColorstr='#00ffffff',GradientType=0 ); /* IE6-9 */
+/*	background: -moz-linear-gradient(top, rgba(255,255,255,0.25) 0%, rgba(255,255,255,0) 100%); /* FF3.6+ */
+/*	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(255,255,255,0.25)), color-stop(100%,rgba(255,255,255,0))); /* Chrome,Safari4+ */
+/*	background: -webkit-linear-gradient(top, rgba(255,255,255,0.25) 0%,rgba(255,255,255,0) 100%); /* Chrome10+,Safari5.1+ */
+/*	background: -o-linear-gradient(top, rgba(255,255,255,0.25) 0%,rgba(255,255,255,0) 100%); /* Opera 11.10+ */
+/*	background: -ms-linear-gradient(top, rgba(255,255,255,0.25) 0%,rgba(255,255,255,0) 100%); /* IE10+ */
+/*	background: linear-gradient(to bottom, rgba(255,255,255,0.25) 0%,rgba(255,255,255,0) 100%); /* W3C */
+/*	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#40ffffff', endColorstr='#00ffffff',GradientType=0 ); /* IE6-9 */
 	}
 body.controller-blog ul.blog-article-list li.blog-article-list-item.blog-article-abstract .blog-article-info {
+	padding-left: 6px;
 	}
 body.controller-blog ul.blog-article-list li.blog-article-list-item.blog-article-abstract .blog-article-info ul.blog-article-info-list {
 	margin: 0px;
@@ -147,18 +155,21 @@ body.controller-blog ul.blog-article-list li.blog-article-list-item.blog-article
 	display: inline;
 	margin-right: 0.5em;
 	}
+/*
 body.controller-blog ul.blog-article-list li.blog-article-list-item.blog-article-abstract .blog-article-info li.blog-article-info-list-item span {
 	background-color: rgba(255,250,240,0.5);
 	background-repeat: no-repeat;
 	background-position: 3px 1px;
 	padding: 1px 6px 1px 23px;
 	}
+*//*
 body.controller-blog ul.blog-article-list li.blog-article-list-item.blog-article-abstract .blog-article-info li.blog-article-info-list-item span.blog-article-date {
 	background-image: url(http://img.int1a.net/famfamfam/silk/date.png);
 	}
 body.controller-blog ul.blog-article-list li.blog-article-list-item.blog-article-abstract .blog-article-info li.blog-article-info-list-item span.blog-article-time {
 	background-image: url(http://img.int1a.net/famfamfam/silk/time.png);
 	}
+*/
 
 body.controller-blog ul.blog-article-list li.blog-article-list-item.blog-article-abstract .blog-article-link,
 body.controller-blog ul.blog-article-list li.blog-article-list-item.blog-article-abstract .blog-article-content {
@@ -166,6 +177,7 @@ body.controller-blog ul.blog-article-list li.blog-article-list-item.blog-article
 	display: block;
 	padding: 0 5px 0 8px;
 	margin-top: 0.25em;
+	opacity: 0.75;
 	}
 body.controller-blog ul.blog-article-list li.blog-article-list-item.blog-article-abstract .blog-article-info .blog-article-author-list {
 	display: inline;
