Add 'open in new window'.

--- a/JS/TinyMCE/css/tinymce.css
+++ b/JS/TinyMCE/css/tinymce.css
@@ -3,7 +3,8 @@ div.mce-container.mce-panel.mce-menu > div.mce-container-body.mce-stack-layout {
 	overflow: auto;
 	}
 
+/*
 div.mce-stack-layout-item .mce-text {
     font-size: 0.9em;
     }
-
+*/
