Setting height is not working.

--- a/JS/TinyMCE/css/tinymce.css
+++ b/JS/TinyMCE/css/tinymce.css
@@ -1,4 +1,4 @@
-div.mce-container.mce-panel.mce-menu > div.mce-container-body.mce-stack-layout {
+iv.mce-container.mce-panel.mce-menu > div.mce-container-body.mce-stack-layout {
 	max-height: 280px;
 	overflow: auto;
 	}
@@ -7,4 +7,10 @@ div.mce-container.mce-panel.mce-menu > div.mce-container-body.mce-stack-layout {
 div.mce-stack-layout-item .mce-text {
     font-size: 0.9em;
     }
+*/
+
+/* hack to force a height */
+/*.mceEditor > table {
+    width: 123px !important;
+}
 */
