--- a/UI/Navigation/Bootstrap/Navbar/css/module.ui.helper.bootstrap.navbar.css
+++ b/UI/Navigation/Bootstrap/Navbar/css/module.ui.helper.bootstrap.navbar.css
@@ -52,9 +52,12 @@ html.mm-opening .mm-page,
 html.mm-opening #mm-blocker,
 html.mm-opening .mm-fixed-top,
 html.mm-opening .mm-fixed-bottom {
-	left: 240px;
+	left: 300px;
 	}
 
+html.mm-opening div.mm-menu {
+	width: 300px;
+	}
 
 
 body.navbar-fixed #layout-field {
