Rename CSS file.

--- a/Work/Missions/css/module.work.missions.css
+++ b/Work/Missions/css/module.work.missions.css
@@ -720,10 +720,6 @@ body.controller-work-mission input[type="checkbox"] {
 #work-mission-buttons input.changed {
 	background-color: #FFB;
 	}
-
-
-
-
 #work-mission-buttons .btn-group ul.dropdown-menu {
 	max-height: 250px;
 	overflow-x: hidden;
@@ -732,7 +728,6 @@ body.controller-work-mission input[type="checkbox"] {
 	min-width: 150px;
 	max-width: 150px;*/
 	}
-
 #work-mission-buttons .btn-group ul.dropdown-menu li.selectable a {
 	width: 100%;
 	white-space: nowrap;
@@ -740,7 +735,9 @@ body.controller-work-mission input[type="checkbox"] {
 	text-overflow: ellipsis;
 /*	padding: 3px 0px;*/
 	}
-
+#work-mission-buttons label {
+	margin-left: 4px;
+}
 
 
 /*  --  MISSION EDITOR  --  */
