--- a/UI/Navigation/Bootstrap/AccountMenu/css/module.ui.helper.bootstrap.menu.account.css
+++ b/UI/Navigation/Bootstrap/AccountMenu/css/module.ui.helper.bootstrap.menu.account.css
@@ -21,7 +21,7 @@ body.navbar-fixed #account-menu {
 	}
 #account-menu .dropdown-toggle {
 	}
-#account-menu .avatar {
+#account-menu div.avatar {
 	float: left;
 	width: 32px;
 	height: 32px;
@@ -69,4 +69,3 @@ body.navbar-fixed #account-menu {
 		display: none;
 	}
 }
-
