--- a/UI/Navigation/Bootstrap/AccountMenu/css/module.ui.helper.bootstrap.menu.account.css
+++ b/UI/Navigation/Bootstrap/AccountMenu/css/module.ui.helper.bootstrap.menu.account.css
@@ -46,9 +46,14 @@ body.navbar-fixed #account-menu {
 	font-size: 1.1em;
 /*	font-weight: bold;
 */	}
+#account-menu .labels div.fullname {
+	padding-top: 0.2em;
+	font-size: 0.9em;
+	color: #777;
+	}
 #account-menu .labels div.email {
 	font-size: 0.8em;
-	color: #999
+	color: #999;
 	}
 
 #account-menu.inverse {
@@ -67,5 +72,10 @@ body.navbar-fixed #account-menu {
 @media screen and (max-width: 900px) {
 	#account-menu .labels {
 		display: none;
+		}
+	}
+@media screen and (max-width: 979px) {
+	#account-menu .labels div.fullname {
+		display:  none;
 	}
 }
