--- a/Info/Blog/css/module.info.blog.css
+++ b/Info/Blog/css/module.info.blog.css
@@ -1,19 +1,19 @@
-div.blog-post {
+body.moduleInfoBlog div.blog-post {
 	padding-bottom: 1em;
 	}
 
-div.blog-post .blog-post-info dl.dl-inline {
+body.moduleInfoBlog .infobar dl.dl-inline {
 	border-top: 1px solid rgba(127,127,127,0.25);
-	border-bottom: 1px solid rgba(127,127,127,0.5);
+	border-bottom: 1px solid rgba(127,127,127,0.25);
 	padding-top: 0.5em;
 	}
-div.blog-post .blog-post-info dl.dl-inline:after {
+body.moduleInfoBlog .infobar dl.dl-inline:after {
 	clear: both;
 	content: ".";
 	visibility: hidden;
 	}
-div.blog-post .blog-post-info dl.dl-inline dt,
-div.blog-post .blog-post-info dl.dl-inline dd {
+body.moduleInfoBlog .infobar dl.dl-inline dt,
+body.moduleInfoBlog .infobar dl.dl-inline dd {
 	float: left;
 	width: auto;
 	clear: none;
@@ -21,12 +21,24 @@ div.blog-post .blog-post-info dl.dl-inline dd {
 	padding-right: 1em;
 	line-height: 1em;
 	}
-div.blog-post .blog-post-info dl.dl-inline dt {
+body.moduleInfoBlog .infobar dl.dl-inline dt {
 	border-left: 1px solid rgba(127,127,127,0.5);
 	padding-left: 1em;
 	}
-div.blog-post .blog-post-info dl.dl-inline dd {
+body.moduleInfoBlog .infobar dl.dl-inline dd {
 	}
-div.blog-post .blog-post-info dl.dl-inline dt:first-child {
+body.moduleInfoBlog .infobar dl.dl-inline dt:first-child {
 	border-left: none;
+	}
+
+body.moduleInfoBlog .infobar.blog-comment-info {}
+body.moduleInfoBlog .infobar.blog-post-info {}
+
+
+
+body.moduleInfoBlog .blog-post-list .infobar dl.dl-inline {
+	border-bottom: 1px solid rgba(127,127,127,0.5);
+	}
+body.moduleInfoBlog .blog-post-view .infobar.blog-post-info dl.dl-inline {
+	margin-top: 0;
 	}
