--- a/UI/CSS/Panel/css/layout.panels.css
+++ b/UI/CSS/Panel/css/layout.panels.css
@@ -49,7 +49,7 @@ body.content-panel-style-2 div.content-panel {
 	border-radius: 3px;
 	display: block;
 	margin-bottom: 20px;
-	font-size: 12px;
+/*	font-size: 12px;*/
 	border: 0;
 	}
 body.content-panel-style-2 div.content-panel > div.content-panel-inner {
