--- a/Manage/Pages/css/module.manage.pages.css
+++ b/Manage/Pages/css/module.manage.pages.css
@@ -10,6 +10,7 @@ body.moduleManagePage #manage-page-tree .nav-pills.nav-stacked {
 	margin-bottom: 0.5em;
 	}
 body.moduleManagePage #manage-page-tree .nav-pills.nav-stacked > li > a {
+	font-size: 0.9em;
 	margin-top: 0px;
 	margin-bottom: 0px;
 	padding-top: 4px;
