--- a/Work/Missions/css/module.work.missions.css
+++ b/Work/Missions/css/module.work.missions.css
@@ -458,7 +458,8 @@ table tr th .sortable.right {
 	width: 100%;
 	position: relative;
 	overflow: hidden;
-	height: 90px;
+	height: 100px;
+	vertical-align: top;
 	}
 #mission-calendar tr th.week-number {
 	border-width: 1px 1px 0px 0px;
@@ -485,7 +486,7 @@ table tr th .sortable.right {
 	}
 #mission-calendar tr td.inactive,
 #mission-calendar tr td.past {
-	height: 55px;
+/*	height: 55px;*/
 	}
 #mission-calendar tr td.past {
 	background-color: #F7F7F7;
@@ -575,6 +576,18 @@ table tr th .sortable.right {
 	font-weight: lighter;
 	font-size: 1.4em;
 	}
+
+#mission-calendar-large,
+#mission-calendar-small {
+	width: 100%;
+	}
+#mission-calendar-large tbody tr th {
+	width: 2%;
+	}
+#mission-calendar-large tbody tr td {
+	width: 14%;
+	}
+
 
 ul li label span.empty {
 	color: #666;
