--- a/Work/Issues/css/site.work.issue.css
+++ b/Work/Issues/css/site.work.issue.css
@@ -151,7 +151,7 @@
 
 	
 table.issues tr td {
-	text-shadow: 0px 1px 1px rgba(127,127,127,0.5);
+/*	text-shadow: 0px 1px 1px rgba(127,127,127,0.5);*/
 	}
 
 table.issues tr td a {
@@ -193,6 +193,7 @@ table.issues tr td.cell-status {
 table.issues tr td.cell-age {
 	width: 12px;
 	text-align: right;
+	font-size: 0.85em;
 	}
 table.issues tr.status-0 td.cell-status {
 	border: 1px dotted gray;
