--- a/UI/CSS/Panel/css/layout.panels.css
+++ b/UI/CSS/Panel/css/layout.panels.css
@@ -184,7 +184,7 @@ body.content-panel-style-4 div.content-panel {
 	overflow: hidden;
 	}
 body.content-panel-style-4 div.content-panel.content-panel-info {
-	background-color: rgba(255,255,255,0.75);
+	background-color: rgba(255,255,255,0.5);
 	}
 body.content-panel-style-4 div.content-panel.content-panel-filter {
 	background-color: rgba(255,255,255,0.25);
@@ -203,9 +203,18 @@ body.content-panel-style-4 div.content-panel > h4 {
 	color: rgba(0,0,0,0.5);
 	font-weight: lighter;
 	text-transform: uppercase;
+	margin: -0.5rem -1rem 0.5rem -1rem;
+	padding: 0.75rem 1rem 0.5rem 1rem;
+	background-color: rgba(255,255,255,0.5);
+	}
+body.content-panel-style-4 div.content-panel > h3,
+body.content-panel-style-4 div.content-panel > h4 {
+	line-height: 1.5em;
+/*	border-bottom: 1px solid rgba(191,191,191,0.5);*/
+	box-shadow: 0px 0px 4px rgba(127,127,127,0.5);
 	}
 body.content-panel-style-4 div.content-panel > div.content-panel-inner div.buttonbar {
-	background-color: rgba(255,255,255,1);
+	background-color: rgba(255,255,255,0.33);
 	border-top: 1px solid rgba(0,0,0,0.1);
 	margin: 1rem -1rem -0.5rem -1rem;
 	padding: 0.5rem 1rem;
